--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -6,7 +6,7 @@ data:
   image_key: images
   max_prompt_length: 2048
   max_response_length: 2048
-  rollout_batch_size: 512
+  rollout_batch_size: 384
   val_batch_size: -1
   shuffle: true
   seed: 1
@@ -22,9 +22,9 @@ algorithm:
 
 worker:
   actor:
-    global_batch_size: 128
-    micro_batch_size_per_device_for_update: 4
-    micro_batch_size_per_device_for_experience: 16
+    global_batch_size: 48
+    micro_batch_size_per_device_for_update: 2
+    micro_batch_size_per_device_for_experience: 8
     max_grad_norm: 1.0
     padding_free: true
     ulysses_sequence_parallel_size: 1
@@ -72,10 +72,10 @@ worker:
 
 trainer:
   total_episodes: 15
-  logger: ["console", "wandb"]
+  logger: ["console"]
   project_name: easy_r1
   experiment_name: qwen2_5_7b_math_grpo
-  n_gpus_per_node: 8
+  n_gpus_per_node: 6
   nnodes: 1
   val_freq: 5  # -1 to disable
   val_before_train: true
